# ubs-hackathon

./: .gitignore  DEMO.md  README.md  environment.yml  pyproject.toml
config/: big_config.yaml  big_schema_docs.json  config.yaml  schema_docs.json
data/: big_demo.cypher  neo4j_demo.cypher  official_synthetic_schema.csv
docs/: ai_questions.md  neo4j.md  setup.md  technical.md  usage.md
frontend/: .gitignore  README.md  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/pages/: dashboard.vue  index.vue  mcp-servers.vue  sources.vue
frontend/pages/connectors/: [id].vue  index.vue
frontend/pages/mcp-servers/: [id].vue  index.vue
frontend/pages/sources/: [name].vue  index.vue
frontend/public/: icon-192x192.20260313.avif
scripts/: build-catalog.sh  generate_data.py  init-data.sh  init-env.sh  run-all.sh  wipe-data.sh
src/ubs_hackathon/: __init__.py  backend.py  builder.py  catalog.py  config.py  datasource.py  demo_seed.py  embeddings.py  meta_store.py  models.py  registry.py  server.py  source_runtime.py
tests/: test_backend_api.py  test_builder_docs.py  test_embeddings.py  test_graph_sources.py  test_meta_store_migration.py  test_security.py  test_server_upstream_proxy.py  test_temp_views.py
