[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubs-hackathon"
version = "0.1.0"
description = "MCP-powered assistant for schema search and safe analytics queries"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "UBS Hackathon Team" }]
dependencies = [
  "mcp>=1.9.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Install the driver for your target database alongside the base package.
# SQLite is included with Python and needs no extra driver.
postgres  = ["psycopg2-binary>=2.9"]
mysql     = ["pymysql>=1.1"]
mssql     = ["pyodbc>=5.0"]
oracle    = ["oracledb>=2.0"]
snowflake = ["snowflake-sqlalchemy>=1.6"]
bigquery  = ["sqlalchemy-bigquery>=1.10"]
duckdb    = ["duckdb-engine>=0.13"]

[project.scripts]
ubs-mcp-server = "ubs_hackathon.server:main"
ubs-build-catalog = "ubs_hackathon.builder:main"
ubs-seed-demo = "ubs_hackathon.demo_seed:main"
ubs-backend = "ubs_hackathon.backend:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
